feat: add not-found page

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -12,5 +12,8 @@
   "localeSwitcher": {
     "en": "English",
     "pt": "Portuguese"
+  },
+  "notFound": {
+    "title": "This page could not be found"
   }
 }
