--- a/src/i18n/messages/pt.json
+++ b/src/i18n/messages/pt.json
@@ -12,5 +12,8 @@
   "localeSwitcher": {
     "en": "Inglês",
     "pt": "Português"
+  },
+  "notFound": {
+    "title": "Esta página não pôde ser encontrada"
   }
 }
