fix: change translation keys pattern

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -9,11 +9,11 @@
     "title": "FE Blog",
     "description": "Just another React blog"
   },
-  "localeSwitcher": {
+  "locale_switcher": {
     "en": "English",
     "pt": "Portuguese"
   },
-  "notFound": {
+  "not_found": {
     "title": "This page could not be found"
   }
 }
