--- a/src/i18n/messages/pt.json
+++ b/src/i18n/messages/pt.json
@@ -13,7 +13,7 @@
     "en": "Inglês",
     "pt": "Português"
   },
-  "notFound": {
+  "not_found": {
     "title": "Esta página não pôde ser encontrada"
   }
 }
