fix: adjust translation key

--- a/src/i18n/messages/pt.json
+++ b/src/i18n/messages/pt.json
@@ -9,7 +9,7 @@
     "title": "FE Blog",
     "description": "Somente mais um blog React"
   },
-  "localeSwitcher": {
+  "locale_switcher": {
     "en": "Inglês",
     "pt": "Português"
   },
