feat: add app header

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -15,5 +15,8 @@
   },
   "not_found": {
     "title": "This page could not be found"
+  },
+  "app_header": {
+    "title": "The React Blog"
   }
 }
