--- a/src/i18n/messages/pt.json
+++ b/src/i18n/messages/pt.json
@@ -15,5 +15,8 @@
   },
   "not_found": {
     "title": "Esta página não pôde ser encontrada"
+  },
+  "app_header": {
+    "title": "O Blog React"
   }
 }
