--- a/src/i18n/messages/pt.json
+++ b/src/i18n/messages/pt.json
@@ -25,7 +25,7 @@
     "search_placeholder": "Pesquisar artigos",
     "empty": "Nenhum artigo encontrado"
   },
-  "article": {
+  "post": {
     "not_found": {
       "title": "Artigo não encontrado",
       "message": "O artigo que você está procurando não existe neste idioma",
