feat: implement cmdk search

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -23,6 +23,7 @@
   },
   "posts_list": {
     "search_placeholder": "Search articles",
+    "search_group": "Suggestions",
     "empty": "No articles found"
   },
   "post": {
