feat: add search results counter

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -25,7 +25,8 @@
     "empty": "No articles found"
   },
   "posts_list": {
-    "empty": "No articles found"
+    "empty": "No articles found",
+    "search_results": "Search results"
   },
   "post": {
     "not_found": {
