--- a/src/i18n/messages/pt.json
+++ b/src/i18n/messages/pt.json
@@ -41,7 +41,9 @@
   "about_me": {
     "link": "Sobre mim",
     "bio": "Sou um desenvolvedor Javascript, focado em React e Node.",
-    "bio_2": "Focado em aplições web de alta performance e UX construídas com Javascript e Typescript, utilizando React e Node."
+    "bio_2": "Focado em aplições web de alta performance e UX construídas com Javascript e Typescript, utilizando React e Node.",
+    "experience_title": "Experiência",
+    "now": "Agora"
   },
   "toast": {
     "success": "Código copiado para a área de transferência",
