feat: implement certificates section

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -43,6 +43,7 @@
     "bio": "I'm a Javascript developer, focused on React and Node.",
     "bio_2": "Focused on high performance and UX web applications built with Javascript and Typescript, using React and Node.",
     "experience_title": "Experience",
+    "certificates_title": "Certificates",
     "now": "Now"
   },
   "toast": {
