--- a/src/i18n/messages/pt.json
+++ b/src/i18n/messages/pt.json
@@ -43,6 +43,7 @@
     "bio": "Sou um desenvolvedor Javascript, focado em React e Node.",
     "bio_2": "Focado em aplições web de alta performance e UX construídas com Javascript e Typescript, utilizando React e Node.",
     "experience_title": "Experiência",
+    "certificates_title": "Certificados",
     "now": "Agora"
   },
   "toast": {
