feat: implement copyable heading

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -47,6 +47,8 @@
     "now": "Now"
   },
   "toast": {
+    "copy_heading_link_success": "Link copied to clipboard",
+    "copy_heading_link_error": "Failed to copy link to clipboard",
     "success": "Code copied to clipboard",
     "error": "Failed to copy code to clipboard"
   }
